# codex

./: .dockerignore  .gitignore  Dockerfile.app-server  Dockerfile.gateway  README.md  docker-compose.gateway.yml  justfile
codex-rs/: Cargo.toml  (+1 more)
codex-rs/gateway/: BUILD.bazel  Cargo.toml
codex-rs/gateway/src/: adapter.rs  admission.rs  api.rs  auth.rs  config.rs  embedded.rs  embedded_remote.rs  embedded_remote_loop.rs  embedded_remote_tests.rs  embedded_test_support.rs  embedded_test_support_embedded_apps.rs  embedded_test_support_mock_responses.rs  embedded_test_support_multi_connection.rs  embedded_test_support_multi_connection_disconnect.rs  embedded_test_support_multi_connection_disconnect_reconnect.rs  embedded_test_support_multi_connection_disconnect_server_requests.rs  embedded_test_support_multi_connection_disconnect_wrong_thread_read.rs  embedded_test_support_multi_worker.rs  embedded_test_support_multi_worker_bootstrap.rs  embedded_test_support_multi_worker_bootstrap_server.rs  embedded_test_support_multi_worker_filesystem.rs  embedded_test_support_multi_worker_notifications.rs  embedded_test_support_multi_worker_notifications_warnings.rs  embedded_test_support_multi_worker_plugins.rs  embedded_test_support_multi_worker_reconnect_bootstrap.rs  embedded_test_support_multi_worker_server_requests.rs  embedded_test_support_multi_worker_server_requests_concurrent.rs  embedded_test_support_multi_worker_server_requests_session.rs  embedded_test_support_multi_worker_sessions.rs  embedded_test_support_reconnect.rs  embedded_test_support_reconnect_common.rs  (+185 more)
(+622 files in other folders)
